# sicret

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  sicret.py
