[tool.poetry]
name = "sicret"
version = "0.1.1"
description = "What happens in secret, stays in sicret."
authors = ["rfzee <rfzee@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^41.0.7"

[tool.poetry.scripts]
sicret = 'sicret:main'


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
